--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -9,7 +9,7 @@
 
 .navbar {
     width: 100%;
-    background: transparent;
+    background: #faf9f6;
     display: flex;
     align-items: center;
     justify-content: space-between;
