--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+France+Traditionnelle:wght@100..400&display=swap');
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+
+body, h1, h2, h3, h4, h5, h6, .navbar-logo, .section-title, .hero-title, .footer-title {
+  font-family: 'Playwrite France Traditionnelle', cursive !important;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
 
 /* Navbar Styles */
 .navbar {
@@ -73,3 +81,12 @@
 		font-size: 1.5rem;
 	}
 }
+
+/* Ejemplo de uso de la fuente personalizada:
+.playwrite-fr-trad {
+  font-family: 'Playwrite FR Trad', cursive;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+*/
