--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -363,3 +363,7 @@
         opacity: 0;
     }
 }
+.modal-invitacion-btn:hover {
+    background-color: #624d24 !important;
+    color: #ffffff !important;
+}
