--- a/src/pages/Inspiracion.css
+++ b/src/pages/Inspiracion.css
@@ -73,7 +73,7 @@
 .main-photo-text {
     font-family: 'Playfair Display', serif;
     font-size: 2.2rem;
-    color: #1b5583;
+    color: #ffffff;
     background: none;
     padding: 0.5em 1.2em;
     border-radius: 12px;
